<resources>
    <string name="app_name">대전사람</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item01">내 정보</string>
    <string name="nav_item02">설정</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">위시리스트</string>
    <string name="nav_sub_menu_item02">친구 목록</string>
    <string name="nav_sub_menu_item03">최근 여행지</string>
    <string name="nav_sub_menu_item04">활성화된 여행</string>
    <string name="drawer_header_text01">밀라 커빈스</string>
    <string name="drawer_header_text02">milacarbins@gmail.com</string>
    <string name="drawer_header_text03">010-7637-2082</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
