<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item01"
            android:icon="@drawable/ic_person2"
            android:title="@string/nav_item01" />
        <item
            android:id="@+id/navigation_item02"
            android:icon="@drawable/ic_setting"
            android:title="@string/nav_item02" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@drawable/ic_star"
                android:id="@+id/nav_sub_menu_item01"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:icon="@drawable/ic_friend"
                android:id="@+id/nav_sub_menu_item02"
                android:title="@string/nav_sub_menu_item02" />
            <item
                android:icon="@drawable/ic_flight_land"
                android:id="@+id/nav_sub_menu_item03"
                android:title="@string/nav_sub_menu_item03" />
            <item
                android:icon="@drawable/ic_flight_takeoff"
                android:id="@+id/nav_sub_menu_item04"
                android:title="@string/nav_sub_menu_item04" />
        </menu>
    </item>

</menu>
